--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -24,5 +24,12 @@
         at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
 </div>
 <ul><li>первый элемент</li><li>второй элемент</li></ul>
+<div>
+    {%for i in posts%}
+        {{i.text|linebreaksbr}}
+        <br>
+    {%endfor%}
+</div>
+
 </body>
 </html>
